# tarsius

./: .gitignore  Cargo.toml  LICENSE  README.md  Report-and-Suggestion.md  Requirements-Technical.md  TODO.md  rustfmt.toml
tarsius-core/: Cargo.toml
tarsius-core/src/: lib.rs
tarsius-storage/: Cargo.toml
tarsius-storage/src/: lib.rs
tarsius-tauri/: Cargo.toml  build.rs  tauri.conf.json
tarsius-tauri/frontend/: package-lock.json  package.json  rollup.config.js
tarsius-tauri/frontend/public/: global.css  index.html
tarsius-tauri/frontend/src/: App.svelte  OutlineNode.svelte  ProjectsView.svelte  ScratchesView.svelte  main.js
tarsius-tauri/icons/: icon.png~
tarsius-tauri/src/: main.rs
