[package]
name = "tarsius-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tarsius-core = { path = "../tarsius-core" }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }