[package]
name = "tarsius-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["shell-open", "custom-protocol"] }
tarsius-core = { path = "../tarsius-core" }
tarsius-storage = { path = "../tarsius-storage" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
